Go to only one category. Need a better plan.

--- a/_posts/2016-04-04-welcome.md
+++ b/_posts/2016-04-04-welcome.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Welcome!"
 date:   2016-04-04 19:52:48 -0400
-categories: update meta
+category: meta
 ---
 
 This my first post on this blog. My goal will be to talk about whatever I'm
