--- a/_posts/2016-04-04-why-blog.md
+++ b/_posts/2016-04-04-why-blog.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Why Blog?"
 date:   2016-04-04 20:55 -0400
-categories: meta blog
+category: blogging
 ---
 
 Why blog? For me it is mainly to become a better writer and communicator,
