MVp post update

--- a/_posts/2016-05-20-mvp_plans.md
+++ b/_posts/2016-05-20-mvp_plans.md
@@ -36,9 +36,18 @@ Version .1 of the design will be called when:
 2. The physical design is mocked in cardboard.
 
 I think normally when following the MVP Process, it makes sense to plan,
-atleast nomimally, all the versions in the beginning, and I do have
-a nominal plan in my head for how to structure everything else. I think
-it is good, though, to the best of your ability, to focus on the one task
-ahead with plenty of checks to make sure nothing is
-missed as the project progresses.
+atleast nomimally, all the versions in the beginning.
 
+The next few of the MVPs will feature:
+
+v0.2:
+
+1. Programming sequential song.
+2. Built mechanical design.
+
+v0.3:
+
+1. Actual boards soldered for solenoids.
+2. LEDs done.
+
+Actually getting the internet enabled will be the last step.
