MVP post update

--- a/_posts/2016-05-20-mvp_plans.md
+++ b/_posts/2016-05-20-mvp_plans.md
@@ -36,7 +36,7 @@ Version .1 of the design will be called when:
 2. The physical design is mocked in cardboard.
 
 I think normally when following the MVP Process, it makes sense to plan,
-atleast nomimally, all the versions in the beginning.
+atleast nominally, all the versions in the beginning.
 
 The next few of the MVPs will feature:
 
